crates/core-executor/src/tests/sql/ddl/snapshots/table/query_create_table_with_timestamps.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"SELECT * FROM timestamps\""
info: "Setup queries: CREATE TABLE timestamps (\n            ntz TIMESTAMP_NTZ, ntz_0 TIMESTAMP_NTZ(0), ntz_3 TIMESTAMP_NTZ(3), ntz_6 TIMESTAMP_NTZ(6), ntz_9 TIMESTAMP_NTZ(9),\n            ltz TIMESTAMP_LTZ, ltz_0 TIMESTAMP_LTZ(0), ltz_3 TIMESTAMP_LTZ(3), ltz_6 TIMESTAMP_LTZ(6), ltz_9 TIMESTAMP_LTZ(9),\n            tz TIMESTAMP_TZ, tz_0 TIMESTAMP_TZ(0), tz_3 TIMESTAMP_TZ(3), tz_6 TIMESTAMP_TZ(6), tz_9 TIMESTAMP_TZ(9),\n            dt DATETIME, dt_0 DATETIME(0), dt_3 DATETIME(3), dt_6 DATETIME(6), dt_9 DATETIME(9))\n        as VALUES (\n            '2025-04-09T21:11:23','2025-04-09T22:11:23','2025-04-09T23:11:23','2025-04-09T20:11:23','2025-04-09T19:11:23',\n            '2025-04-09T21:11:23','2025-04-09T22:11:23','2025-04-09T23:11:23','2025-04-09T20:11:23','2025-04-09T19:11:23',\n            '2025-04-09T21:11:23','2025-04-09T22:11:23','2025-04-09T23:11:23','2025-04-09T20:11:23','2025-04-09T19:11:23',\n            '2025-04-09T21:11:23','2025-04-09T22:11:23','2025-04-09T23:11:23','2025-04-09T20:11:23','2025-04-09T19:11:23'\n        );"
---
Ok(
    [
        "+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+",
        "| ntz                 | ntz_0               | ntz_3               | ntz_6               | ntz_9               | ltz                 | ltz_0               | ltz_3               | ltz_6               | ltz_9               | tz                  | tz_0                | tz_3                | tz_6                | tz_9                | dt                  | dt_0                | dt_3                | dt_6                | dt_9                |",
        "+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+",
        "| 2025-04-09T21:11:23 | 2025-04-09T22:11:23 | 2025-04-09T23:11:23 | 2025-04-09T20:11:23 | 2025-04-09T19:11:23 | 2025-04-09T21:11:23 | 2025-04-09T22:11:23 | 2025-04-09T23:11:23 | 2025-04-09T20:11:23 | 2025-04-09T19:11:23 | 2025-04-09T21:11:23 | 2025-04-09T22:11:23 | 2025-04-09T23:11:23 | 2025-04-09T20:11:23 | 2025-04-09T19:11:23 | 2025-04-09T21:11:23 | 2025-04-09T22:11:23 | 2025-04-09T23:11:23 | 2025-04-09T20:11:23 | 2025-04-09T19:11:23 |",
        "+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+---------------------+",
    ],
)
