crates/core-executor/src/tests/sql/ddl/snapshots/table/query_drop_table_if_exists_uppercase_quoted_table_name.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE IF EXISTS \\\"EMBUCKET\\\".\\\"PUBLIC_SNOWPLOW_MANIFEST\\\".\\\"TABLE_TO_DROP\\\" cascade\""
info: "Setup queries: CREATE SCHEMA embucket.public_snowplow_manifest; CREATE TABLE embucket.public_snowplow_manifest.table_to_drop (id INT)"
---
Ok(
    [
        "+--------+",
        "| status |",
        "+--------+",
        "+--------+",
    ],
)
