crates/core-executor/src/tests/sql/ddl/snapshots/table/query_drop_table_missing.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE embucket.public.missing\""
---
Err(
    "Error: Table missing not found in embucket.public",
)
