crates/core-executor/src/tests/sql/ddl/snapshots/table/query_drop_table_missing_schema.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE embucket.missing.table\""
---
Err(
    "Error: Iceberg error: Namespace missing not found.",
)
