crates/core-executor/src/tests/sql/ddl/snapshots/table/query_drop_table_missing_schema_snowflake_error.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE embucket.missing.table\""
---
Err(
    "Snowflake Error: SQL compilation error: Schema 'embucket.missing' does not exist or not authorized",
)
