crates/core-executor/src/tests/sql/ddl/snapshots/table/query_drop_table_missing_snowflake_error.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE embucket.public.missing\""
---
Err(
    "Snowflake Error: SQL compilation error: Table 'embucket.public.missing' does not exist or not authorized",
)
