crates/core-executor/src/tests/sql/ddl/snapshots/table/query_drop_table_quoted_identifiers.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"SHOW TABLES IN public STARTS WITH 'test'\""
info: "Setup queries: CREATE SCHEMA embucket.\"test public\"; CREATE TABLE embucket.\"test public\".\"test table\" (id INT); INSERT INTO embucket.\"test public\".\"test table\" VALUES (1), (2); DROP TABLE embucket.\"test public\".\"test table\""
---
Ok(
    [
        "++",
        "++",
    ],
)
