crates/core-executor/src/tests/sql/ddl/snapshots/table/query_drop_table_stub_should_pass.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE embucket.test.some_table\""
info: "Setup queries: CREATE SCHEMA embucket.test; CREATE TABLE embucket.test.some_table (id INT)"
---
Ok(
    [
        "+--------+",
        "| status |",
        "+--------+",
        "+--------+",
    ],
)
